[package]
name = "avmore"
version = "0.0.1"
authors = ["Charles Samborski <demurgos@demurgos.net>"]
description = "Open Flash Actionscript Virtual Machine"
documentation = "https://github.com/open-flash/avmore"
homepage = "https://github.com/open-flash/avmore"
repository = "https://github.com/open-flash/avmore"
readme = "./README.md"
keywords = ["vm", "swf", "actionscript"]
license = "MIT"

[lib]
name = "avmore"
path = "src/lib.rs"

[[bin]]
name = "avmore"
path = "src/main.rs"

[dependencies]
scoped-gc = "^0.1.1"
scoped-gc-derive = "^0.1.1"
swf-tree = "^0.0.10"
swf-parser = "^0.0.2"

[dependencies.ordered-float]
version = "^0.5.0"
features = ["serde"]
