[package]
name = "avmore"
version = "0.0.1"
authors = ["Charles Samborski <demurgos@demurgos.net>"]
description = "Open Flash Actionscript Virtual Machine"
documentation = "https://github.com/open-flash/avmore"
homepage = "https://github.com/open-flash/avmore"
repository = "https://github.com/open-flash/avmore"
readme = "./README.md"
keywords = ["vm", "swf", "actionscript"]
license = "AGPL-3.0-or-later"

[lib]
name = "avmore"
path = "src/lib.rs"

[[bin]]
name = "avmore"
path = "src/main.rs"

[dependencies]
avm1-parser = "^0.2.0"
avm1-tree = "^0.2.1"
scoped-gc = "^0.1.3"
scoped-gc-derive = "^0.1.3"
