[package]
name = "avmore"
version = "0.0.1"
authors = ["Charles Samborski <demurgos@demurgos.net>"]
description = "Open Flash Actionscript Virtual Machine"
documentation = "https://github.com/open-flash/avmore"
homepage = "https://github.com/open-flash/avmore"
repository = "https://github.com/open-flash/avmore"
readme = "./README.md"
keywords = ["vm", "swf", "actionscript"]
license = "AGPL-3.0-or-later"
edition = "2018"

[lib]
name = "avmore"
path = "src/lib.rs"

[[bin]]
name = "avmore"
path = "src/main.rs"

[dependencies]
avm1-parser = "^0.7.0"
avm1-tree = "^0.7.0"
scoped-gc = "^0.1.4"
scoped-gc-derive = "^0.1.4"
# Force 1.0.97 (instead of latest 1.0.98) to work around NonZeroI* bug in serde
serde = "=1.0.97"
serde_derive = "=1.0.97"

[dev-dependencies]
test-generator = "^0.2.2"
